<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item_tab_one"
          android:enabled="true"
          android:icon="@mipmap/ic_launcher_round"
          android:title="@string/tab_one"
          app:showAsAction="ifRoom"></item>
    <item android:id="@+id/item_tab_two"
          android:enabled="true"
          android:icon="@mipmap/ic_launcher_round"
          android:title="@string/tab_two"
          app:showAsAction="ifRoom"></item>
    <item android:id="@+id/item_tab_three"
          android:enabled="true"
          android:icon="@mipmap/ic_launcher_round"
          android:title="@string/tab_three"
          app:showAsAction="ifRoom"></item>
</menu>